--- a/src/main/webapp/content/css/vendor.css
+++ b/src/main/webapp/content/css/vendor.css
@@ -1513,13 +1513,21 @@ pre {
     clear: both; }
   @media (min-width: 768px) {
     .container {
-      width: 750px; } }
+      width: 750px; }
+      .containerBody {
+      width: 100%; } }
   @media (min-width: 992px) {
     .container {
-      width: 970px; } }
+      width: 970px; }
+      .containerBody {
+      width: 100%; } }
   @media (min-width: 1200px) {
-    .container {
-      width: 1170px; } }
+ 	.container {
+      width: 1170px; }
+    .containerBody {
+      width: 100%; }
+    /* .container {
+      width: 1170px; } */ }
 
 .container-fluid {
   margin-right: auto;
@@ -5023,11 +5031,11 @@ button.list-group-item-danger {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
+  /* background-color: #f5f5f5;
+  border: 1px solid #e3e3e3; */
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); }
+  /* -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); */ }
   .well blockquote {
     border-color: #ddd;
     border-color: rgba(0, 0, 0, 0.15); }
