#extra div removed

--- a/src/main/webapp/app/components/blog/blog-info.html
+++ b/src/main/webapp/app/components/blog/blog-info.html
@@ -6,6 +6,6 @@
                 <div class="col-md-11">
                 <h3><a ui-sref="blog-detail({id:$ctrl.blog.id})">{{$ctrl.blog.blogTitle}}</a></h3>
                 <div> {{$ctrl.blog.description}} </div>
-                </div></div>
-               
+                </div>
 </div>
+
