#scroll bar css added vinay

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -562,4 +562,8 @@ hr{
     padding-right: 0px;
     text-align: center;
 }
+
+.scrolly {
+  max-height: 295px;
+  overflow-y: auto; }
 /* jhipster-needle-css-add-main JHipster will add new css style */
